--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <section class="what_we_can_do">
           <div class="inner">
-            <img  src="img/iphone.png" alt="">
+            <img  src="img/iphone.png">
             <div class="what_we_can_do__text">
               <h2 class="what_we_can_do__title">WHAT WE CAN DO?</h2>
               <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text ever since the <br> 1500s, when an unknown printer took a galley of type and scrambled it to <br> make a type specimen book.</p>
@@ -55,12 +55,12 @@
           <div class="inner our_latest_work__inner">
             <h2 class="our_latest_work__title">OUR LATEST WORK</h2>
             <div class="our_latest_work__imgs">
-                <img class="our_latest_work__common" src="img/01.jpg" alt="">
-                <img class="our_latest_work__common" src="img/02.jpg" alt="">
-                <img class="our_latest_work__common" src="img/03.jpg" alt="">
-                <img class="our_latest_work__common" src="img/04.jpg" alt="">
-                <img class="our_latest_work__common" src="img/05.jpg" alt="">
-                <img class="our_latest_work__common" src="img/06.jpg" alt="">
+                <img class="our_latest_work__common" src="img/01.jpg" >
+                <img class="our_latest_work__common" src="img/02.jpg" >
+                <img class="our_latest_work__common" src="img/03.jpg" >
+                <img class="our_latest_work__common" src="img/04.jpg" >
+                <img class="our_latest_work__common" src="img/05.jpg" >
+                <img class="our_latest_work__common" src="img/06.jpg" >
             </div>
             <div class="our_latest_work__footer">
               <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's standard dummy <br>text ever.</p>
@@ -73,7 +73,7 @@
 
         <section class="our_skills clearfix">
           <div class="inner">
-            <h2 class="our_skills_text">OUR SKILLS</h2>
+            <h2 class="our_skills_title">OUR SKILLS</h2>
             <figure class="our_skills_imgs ">
               <div class="our_skills_common">
                   <div class="our_skills_circle">
@@ -104,7 +104,7 @@
                 <i class="fab fa-facebook-f fa-4x"></i>
               </a>
               <a class="sns_icons__common" href="">
-                <i class="fas fa-basketball-ball fa-4x"></i>
+                  <i class="fab fa-dribbble fa-4x"></i>
               </a>
               <a class="sns_icons__common" href="">
                 <i class="fab fa-twitter fa-4x"></i>
