チェックリストを参考に変更を行いました！ コードレビューをお願い致します！

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="our_latest_work__footer">
               <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's standard dummy <br>text ever.</p>
-              <a class="email__btn">
+              <a class="email__btn" href="">
                 Email Me!
               </a>
             </div>
