一度コードレビューを行なってもらい、修正しました。

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 
     <main class="main">
       <div>
-        <section class="bolt-theme">
+        <div class="bolt-theme">
           <div class="inner">
             <h1 class="bolt__title">Bolt Theme</h1>
             <p class="bolt__subtitle">FREE BOOTSTRAP THEMES</p>
           </div>
-        </section>
+        </div>
 
         <section class="what_we_can_do">
-          <div class="inner">
-            <img  src="img/iphone.png">
+          <div class="inner what_we_can_do__inner">
+            <img src="img/iphone.png">
             <div class="what_we_can_do__text">
               <h2 class="what_we_can_do__title">WHAT WE CAN DO?</h2>
-              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard dummy text ever since the <br> 1500s, when an unknown printer took a galley of type and scrambled it to <br> make a type specimen book.</p>
+              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
         </section>
@@ -55,12 +55,25 @@
           <div class="inner our_latest_work__inner">
             <h2 class="our_latest_work__title">OUR LATEST WORK</h2>
             <div class="our_latest_work__imgs">
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/01.jpg" >
+              </a>
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/02.jpg" >
+              </a>
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/03.jpg" >
+              </a>
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/04.jpg" >
+              </a>
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/05.jpg" >
+              </a>
+              <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/06.jpg" >
+              </a>
+
             </div>
             <div class="our_latest_work__footer">
               <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's standard dummy <br>text ever.</p>
@@ -74,26 +87,26 @@
         <section class="our_skills clearfix">
           <div class="inner">
             <h2 class="our_skills_title">OUR SKILLS</h2>
-            <figure class="our_skills_imgs ">
+            <div class="our_skills_imgs ">
               <div class="our_skills_common">
-                  <div class="our_skills_circle">
+                <figure class="our_skills_circle">
                   <img class="our_skills_img" src="img/circle_01.png" alt="">
                   <figcaption>JavaScript</figcaption>
-                </div>
-                <div class="our_skills_circle">
+                </figure>
+                <figure class="our_skills_circle">
                   <img class="our_skills_img" src="img/circle_02.png" alt="">
                   <figcaption>Bootstrap</figcaption>
-                </div>
-                <div class="our_skills_circle">
+                </figure>
+                <figure class="our_skills_circle">
                   <img class="our_skills_img" src="img/circle_03.png" alt="">
                   <figcaption>WordPress</figcaption>
-                </div>
-                <div class="our_skills_circle">
+                </figure>
+                <figure class="our_skills_circle">
                   <img class="our_skills_img" src="img/circle_04.png" alt="">
                   <figcaption>PhotoShop</figcaption>
-                </div>
+                </figure>
               </div>
-            </figure>
+            </div>
           </div>
         </section>
 
