--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div>
         <div class="bolt-theme">
           <div class="inner">
-            <h1 class="bolt__title">Bolt Theme</h1>
+            <h1 class="bolt__title is-raleway">Bolt Theme</h1>
             <p class="bolt__subtitle">FREE BOOTSTRAP THEMES</p>
           </div>
         </div>
@@ -45,7 +45,7 @@
           <div class="inner what_we_can_do__inner">
             <img src="img/iphone.png">
             <div class="what_we_can_do__text">
-              <h2 class="what_we_can_do__title">WHAT WE CAN DO?</h2>
+              <h2 class="what_we_can_do__title is-raleway">WHAT WE CAN DO?</h2>
               <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
@@ -53,7 +53,7 @@
 
         <article class="our_latest_work clearfix">
           <div class="inner our_latest_work__inner">
-            <h2 class="our_latest_work__title">OUR LATEST WORK</h2>
+            <h2 class="our_latest_work__title is-raleway">OUR LATEST WORK</h2>
             <div class="our_latest_work__imgs">
               <a class="our_latest_work__link" href="">
                 <img class="our_latest_work__common" src="img/01.jpg" >
@@ -86,7 +86,7 @@
 
         <section class="our_skills clearfix">
           <div class="inner">
-            <h2 class="our_skills_title">OUR SKILLS</h2>
+            <h2 class="our_skills_title is-raleway">OUR SKILLS</h2>
             <div class="our_skills_imgs ">
               <div class="our_skills_common">
                 <figure class="our_skills_circle">
