boltのレスポンシブ サイトを作成したのでコードレビューをお願い致します。

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="This is my portfolio site.">
     <meta name="keyword" content="bolt, bootstrap, portfolio">
     <!--viewportの幅は端末やブラウザアプリ毎によって異なる -->
-    <meta name="viewport" content="width=device-width"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> 
     <title>Bolt - Free Bootstrap 3 Theme</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" >
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
 
@@ -26,6 +26,7 @@
         <div class="bolt__logo">
             <i class="fas fa-bolt fa-2x bolt_icon"></i>
         </div>
+        <i class="fas fa-bars bamburger__icon"></i>
         <a class="contact__btn" href="">
           Contact
         </a>
@@ -36,17 +37,17 @@
       <div>
         <div class="bolt-theme">
           <div class="inner">
-            <h1 class="bolt__title is-raleway">Bolt Theme</h1>
-            <p class="bolt__subtitle">FREE BOOTSTRAP THEMES</p>
+            <h1 class="bolt__title is-raleway">Bolt <br class="br-sp"> Theme</h1>
+            <p class="bolt__subtitle">FREE BOOTSTRAP <br class="br-sp"> THEMES</p>
           </div>
         </div>
 
         <section class="what_we_can_do">
           <div class="inner what_we_can_do__inner">
-            <img src="img/iphone.png">
+            <img class="what_we_can_do_img" src="img/iphone.png">
             <div class="what_we_can_do__text">
               <h2 class="what_we_can_do__title is-raleway">WHAT WE CAN DO?</h2>
-              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy <br class="br-sp">text of the printing and <br class="br-sp">typesetting industry.Lorem Ipsum <br class="br-sp">has been the industry's standard <br class="br-sp">dummy text ever since the1500s,<br class="br-sp"> when an unknown printer took a <br class="br-sp">galley of type and scrambled it to <br class="br-sp">make a type specimen book.</p>
             </div>
           </div>
         </section>
@@ -76,7 +77,7 @@
 
             </div>
             <div class="our_latest_work__footer">
-              <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of the printing and typesetting <br>industry. Lorem Ipsum has been the industry's standard dummy <br>text ever.</p>
+              <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of <br class="br-sp">the printing and typesetting industry. <br class="br-sp">Lorem Ipsum has been the industry's <br class="br-sp">standard dummy text ever.</p>
               <a class="email__btn" href="">
                 Email Me!
               </a>
