チェックシートを参考に変更しました。

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             </div>
             <div class="our_latest_work__footer">
-              <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of <br class="br-sp">the printing and typesetting industry. <br class="br-sp">Lorem Ipsum has been the industry's <br class="br-sp">standard dummy text ever.</p>
+              <p class="our_latest_work__text">Lorem Ipsum is simply dummy text of the printing and typesetting <br class="br-pc">industry. Lorem Ipsum has been the industry's standard dummy <br class="br-pc">text ever.</p>
               <a class="email__btn" href="">
                 Email Me!
               </a>
