チェックしていただいた箇所を修正しました。

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img class="what_we_can_do_img" src="img/iphone.png">
             <div class="what_we_can_do__text">
               <h2 class="what_we_can_do__title is-raleway">WHAT WE CAN DO?</h2>
-              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy <br class="br-sp">text of the printing and <br class="br-sp">typesetting industry.Lorem Ipsum <br class="br-sp">has been the industry's standard <br class="br-sp">dummy text ever since the1500s,<br class="br-sp"> when an unknown printer took a <br class="br-sp">galley of type and scrambled it to <br class="br-sp">make a type specimen book.</p>
+              <p class="what_we_can_do__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
             </div>
           </div>
         </section>
